# Iot-Remote-Lab-Server

./: .gitignore  Cargo.toml  README.md
src/: lib.rs  main.rs
src/adapters/: in_memory_device_repo.rs  mod.rs
src/domain/: device.rs
src/dto/: device_dto.rs  mod.rs
src/handlers/: device_handler.rs  esp32_handler.rs  mod.rs
src/repository/: device_repository.rs  mod.rs
src/service/: device_service.rs  mod.rs  platformio_service.rs
