[package]
name = "iot_remote_lab_server"
version = "0.1.0"
edition = "2021"

[dependencies]

# Web server and async runtime
tokio = { version = "1.42.0", features = ["rt-multi-thread", "macros", "process", "fs"] }
axum = { version = "0.6" }

# Serde for DTOs
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# UUIDs for domain ids
uuid = { version = "1.3", features = ["v4", "serde"] }

# Async trait for repository
async-trait = "0.1"

# Lightweight error handling
anyhow = "1.0"

# For unit tests in examples
tokio-test = "0.4"
tower-http = { version = "0.3", features = ["trace"] }
